designed our features collection section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,188 @@
         <!-- collection section start -->
          <section id="collection">
             <h1 class="section-title text-gray">Popular collection</h1>
+            <div class="collection-card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="Tripod">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Flex Tripod</h3>
+                        <h4 class="card-price">$50.48</h4>
+                        <div class="card-rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-regular fa-star-half-stroke" aria-hidden="true"></i>
+                            <span class="rating-number">4.5</span>
+                        </div>
+                        <p class="card-description">Wordwide               shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="collection-link-wrap">
+                <a href="#" class="collection-more-link">
+                    See More <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
+                </a>
+            </div>
          </section>
         <!-- collection section end -->
+         <!--  -->
+        
     </main>
 </body>
 </html>
