--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/mic.png" alt="Microphone">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Microphone</h3>
+                        <h4 class="card-price">$120.25</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -96,11 +96,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/airpod.png" alt="airpod">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Airpod</h3>
+                        <h4 class="card-price">$100.00</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -115,11 +115,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/drone.png" alt="Drone">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Drone</h3>
+                        <h4 class="card-price">$980.25</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -134,11 +134,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/lights.png" alt="Light Setup picture">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Light Setup</h3>
+                        <h4 class="card-price">$1200.00</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -153,11 +153,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/setup.png" alt="Photoshot set">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Photoshot Set</h3>
+                        <h4 class="card-price">$820.40</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -172,11 +172,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/camera.png" alt="vloging camera">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Vloging Camera</h3>
+                        <h4 class="card-price">$1800.80</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -191,11 +191,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/single-light.png" alt="Tripod">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Green Screen</h3>
+                        <h4 class="card-price">$25.48</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -210,11 +210,11 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./assets/images/tripod.png" alt="Tripod">
+                        <img src="./assets/images/action.png" alt="Action Camera Picture">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Flex Tripod</h3>
-                        <h4 class="card-price">$50.48</h4>
+                        <h3 class="card-title">Action Camera</h3>
+                        <h4 class="card-price">$380.00</h4>
                         <div class="card-rating">
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
                             <i class="fa-solid fa-star" aria-hidden="true"></i>
@@ -235,8 +235,32 @@
             </div>
          </section>
         <!-- collection section end -->
-         <!--  -->
+         <!-- featured products section  -->
+          <section class="featured-products">
+            <img src="./assets/images/gear.png" alt="Featured products iage" class="featured-product-img">
+            <div class="featured-products-content">
+                <h3 class="featured-title">Featured products at one place</h3>
+                <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn-primary featured-btn">Join Now
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+          </section>
+         <!-- featured products section end -->
         
     </main>
+    <!-- footer section -->
+     <footer id="footer">
+        <div class="footer-content">
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="footer-description">Copyright &copy; 2020  influencer products <br> All rights reserved</p>
+            <div class="footer-social">
+                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                <i class="fa-solid fa-globe" aria-hidden="true"></i>
+                <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                <i class="fa-brands fa-youtube" aria-hidden="true"></i>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
